# tompy

./: mypy.ini  pyproject.toml
scripts/: lint.sh  test.sh
tests/: test_tompy.py
